--- a/Currency converter/Base.lproj/Main.storyboard
+++ b/Currency converter/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="MeJ-z8-2Mi">
-    <device id="retina4_0" orientation="landscape">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,34 +15,36 @@
             <objects>
                 <viewController id="2XW-2K-9DV" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kv5-CB-Cvl">
-                        <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="jcQ-U6-U6L">
-                                <rect key="frame" x="34" y="48.5" width="500" height="224"/>
+                                <rect key="frame" x="35" y="112.5" width="250" height="343.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AjA-ON-EdI">
-                                        <rect key="frame" x="0.0" y="0.0" width="500" height="25.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="250" height="25.5"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I'm glad to see that you want to test my completed test task for Tinkoff Fintech School: a currency converter." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wMb-U3-B4C">
-                                        <rect key="frame" x="0.0" y="35.5" width="500" height="43"/>
+                                        <rect key="frame" x="0.0" y="35.5" width="250" height="86"/>
                                         <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="18"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nmJ-yh-NTt">
-                                        <rect key="frame" x="0.0" y="88.5" width="500" height="95.5"/>
+                                        <rect key="frame" x="0.0" y="131.5" width="250" height="172"/>
                                         <string key="text">On the next screen you'll get access to two scrollable menus. You should select the currency "from" and the currency "to" for exchange. The result is displayed between them. Make sure that you have the Internet access (but don't worry, the app won't crash and just show the error).</string>
                                         <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="16"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bbX-zf-RBn">
-                                        <rect key="frame" x="0.0" y="194" width="500" height="30"/>
-                                        <state key="normal" title="Next"/>
+                                        <rect key="frame" x="0.0" y="313.5" width="250" height="30"/>
+                                        <state key="normal" title="Next">
+                                            <color key="titleColor" red="0.13453113880000001" green="0.68564822020000005" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
                                         <connections>
                                             <segue destination="BYZ-38-t0r" kind="show" id="pfh-jf-T6t"/>
                                         </connections>
@@ -78,7 +80,9 @@
                         <viewLayoutGuide key="safeArea" id="DNz-L5-HfH"/>
                     </view>
                     <navigationItem key="navigationItem" title="Welcome" id="mJL-bC-ug6">
-                        <barButtonItem key="backBarButtonItem" title="Back" id="NtD-3Z-gjg"/>
+                        <barButtonItem key="backBarButtonItem" title="Back" id="NtD-3Z-gjg">
+                            <color key="tintColor" red="0.13453113880000001" green="0.68564822020000005" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </barButtonItem>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="npH-fC-uPP" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -90,11 +94,11 @@
             <objects>
                 <viewController title="Converter" id="BYZ-38-t0r" customClass="ViewController" customModule="Currency_converter" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dAH-D1-qnx">
-                                <rect key="frame" x="10" y="149.5" width="548" height="21"/>
+                                <rect key="frame" x="10" y="273.5" width="300" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="Axi-NY-vf2"/>
                                 </constraints>
@@ -103,13 +107,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F0x-2D-vmr">
-                                <rect key="frame" x="0.0" y="32" width="568" height="107.5"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="199.5"/>
                             </pickerView>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iE9-2Y-21d">
-                                <rect key="frame" x="0.0" y="180.5" width="568" height="139.5"/>
+                                <rect key="frame" x="0.0" y="304.5" width="320" height="219.5"/>
                             </pickerView>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="Sj2-0M-hLY">
-                                <rect key="frame" x="274" y="150" width="20" height="20"/>
+                                <rect key="frame" x="150" y="274" width="20" height="20"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -130,6 +134,19 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Converter" id="rNW-uN-6ho">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="MYa-iB-OOH">
+                            <color key="tintColor" red="0.13453113880000001" green="0.68564822020000005" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="YeH-6f-y2r">
+                            <color key="tintColor" red="0.13453113880000001" green="0.68564822020000005" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="refresh:" destination="BYZ-38-t0r" id="akW-sP-Vfi"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="activityIndicator" destination="Sj2-0M-hLY" id="0kC-ST-0Vw"/>
                         <outlet property="label" destination="dAH-D1-qnx" id="rBq-nx-BoS"/>
@@ -147,7 +164,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="MeJ-z8-2Mi" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="X7v-5t-2Jj">
-                        <rect key="frame" x="0.0" y="0.0" width="568" height="32"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
